# cloudconfig

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  travisdeploy
.github/workflows/: workflow.yml
dpm/: __init__.py
dpm/api/: __init__.py  clients.py  env.py  seed.py
dpm/api/client/: dynamic_property_management_client.py
dpm/api/config/: env_config.py
dpm/api/v2/: env.py
dpm/tests/: mocks.py
dpm/tests/bdd/: env_config_test.feature  environment.py  prop_secrets.feature  properties.feature  properties_secrets.feature  seed.feature  v2_env.feature
dpm/tests/bdd/mocks/: document_mock.py  firestore_client_mock.py  mock_data.py  mock_object.py  mockx.py  secret_manager_service_client_mock.py
dpm/tests/bdd/steps/: env_config_test.py  prop_secrets_step.py  properties_secrets_step.py  properties_step.py  seed_step.py
dpm/tests/resource/dynamic-properties-seed/dev/: partner_a.json
dpm/tests/resource/dynamic-properties-seed/prod/: partner_a.json
dpm/tests/unit/: test_clients.py  test_env.py  test_seed.py
