[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cloudconfig"
version = "0.2.0"
description = ""
authors = [
    "Adam Frank <afrank@mozilla.com>",
    "Bryan Sieber <bsieber@mozilla.com>",
    "Chris Valaas <cvalaas@mozilla.com>",
    "Jorge Spiropulo <jspiropulo@mozilla.com>"
]
packages = [
    { include = "dpm" }
]

[[tool.poetry.source]]
name = "mozilla-it"
url = "https://dp2-prod.appspot.com/pypi"

[tool.poetry.dependencies]
# These packages are mandatory and form the core of this package’s distribution.
python = ">=3.7,<4"
pyjson = "*"
pyyaml = "*"
jsonmerge = "*"
google-cloud-firestore = "^1.9.0"
google-cloud-core = "^1.6.0"
cloudsecrets-gcp = { git = "https://github.com/mozilla-it/cloudsecrets-gcp.git", branch = "main" }

[tool.poetry.dev-dependencies]
pre-commit = "*"
tox = "*"
behave = "*"
sphinx = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
mock = "*"
mockito = "*"
coverage = "^5.2"
mock-firestore = "*"
#mock-firestore = "^0.7.1"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37

[testenv]
deps =
    behave
    coverage
    pytest
    mock-firestore
commands =
    coverage run --branch -m behave dpm/tests/bdd
    coverage run -a --branch -m pytest
    coverage html
    coverage xml
    coverage report -m --fail-under 95
"""


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
